@@ -1,5 +1,7 @@
 2012-12-28  Russ Allbery  <rra@stanford.edu>
 
+	* ANSIColor.pm: Document $Term::ANSIColor::AUTOLOCAL.
+
 	* ANSIColor.pm (AUTOLOAD): Support ANSI_COLORS_DISABLED in the
 	generated constant subs.  Fixes a bug where the environment
 	variable would be ignored if the constant were used before it was
